examples/test/testpolicy12854.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12854
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key28: value47
      key31: value49
      key32: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value0
          key3: value48
      podSelector:
        matchLabels:
          key34: value21
          key3: value9
